--- a/2025/week_48/insta_weekly_2025_48_gpt-5-2025-08-07.md
+++ b/2025/week_48/insta_weekly_2025_48_gpt-5-2025-08-07.md
@@ -1,104 +1,94 @@
 # Weekly Instagram Beauty Media Landscape Report
 
-- Key Takeaway: Nov 24–30, 2025 was a sparkle-forward, grunge-holiday week: moody tarot palettes and Christmas greens/reds drove hype (Cosmic Brushes, DeDe’s Signature), while Kaleidos’ Moon Arcade relit C-beauty excitement with viral red graphic liner and refillable lip melts. Tutorials, comparisons, and “one-and-done” shimmer looks outperformed flatlays.
+- Key Takeaway: Nov 24–30, 2025 delivered a Black Friday-fueled indie surge: sparkly, long-wear eye toppers and bold liners dominated, while red–green holiday palettes with real depth led purchase intent. Tutorial reels, macro-sparkle swatches, and comparison content drove the strongest engagement.
 
 ## 1. Overview
 
 - The Vibe:
-  - Launch-heavy week anchored by Black Friday drops: Cosmic Brushes Death (Tarot), DeDe’s Festive Elegance, Kaleidos Moon Arcade, Lethal Serpentine, and Rituel de Fille’s Ghost Frequency reveals.
-  - Content mix skewed to swatch reels, side-by-side comparisons, and “get the look” shorts (graphic liner, one-and-done eye gloss, lip combos). Strong alt/goth and “medieval core” aesthetics threaded through holiday color stories.
+  - Launch week energy across multiple indie drops (Cosmic Brushes, Dede’s Signature, Kaleidos, Rituel de Fille, Lethal). Feeds skewed to swatch carousels and close-up sparkly demos, with seasonal looks (snowflake liner, grunge Christmas) and “one-and-done” glossy lids.
+  - Alt/goth aesthetics threaded through the week: oil-slick eye gloss, gray/teal/blackened lips, medieval-core curations, and graphic red liner.
 - Engagement Temperature:
-  - High energy and purchase intent on palette launches; repeated “add to cart” signals and comparison asks.
-  - Viral resonance: Kaleidos (ghoul; 122k plays, 10k likes), Lindsey’s snowflake tutorial (224k plays, 18.7k likes), advent calendar unboxings (up to 229k plays), and alt-aesthetic curations.
-  - Commenters actively sought links, codes, comparisons, and shade guidance; minimal negativity beyond a few “true sparkly red” frustrations.
+  - Hot. Followers asked for shade comparisons, undertone breakdowns, and links; many declared intent to buy, tagged friends, and referenced past OOS pain points.
+  - Notable asks: side-by-side palette comparisons (Cosmic Death vs Sinister/Cooltrals/Smolder), “true metallic red” demands, brush recs for water-activated liner, and UK availability for limited drops.
 
 ## 2. Product Momentum (Brand & Item Velocity)
 
 - Top Mentioned Brands:
-  - Kaleidos Makeup, Cosmic Brushes (Cosmic Beauty), DeDe’s Signature, Rituel de Fille, Lethal Cosmetics, Bella Beauté Bar, Melt Cosmetics, Clionadh, About-Face, Danessa Myricks, Glisten, MAC, Huda Beauty.
+  - Kaleidos, Cosmic Brushes (Cosmic Beauty), Dede’s Signature, Rituel de Fille, Lethal Cosmetics, Bella Beauté Bar, Clionadh, Terra Moons, Melt, Unearthly, Blend Bunny, MOB Beauty, Fantasy Cosmetica, Joocyee, Girlcult, Half Magic.
 
 - Viral Products:
-  - Kaleidos Moon Arcade:
-    - Epiphany Glow Melt-On Eyeliners (new shades): Scarlet Striker (red), Moon Mechanic (blue), Miss Matrix (blue), Stranger (gray), Lunaria, Aurora Runner, Jackpot Jinx. Long-wear + graphic/block liner demos drew saves and questions.
-    - Glass Load Lip Melts (refillable): standout shades Frizz Melt (blue glitter glaze), Geek Out (dusky lilac), Stranger (opaque gray), Cheat Code (pink–orange glitter). Lip liners (Java, Merlot, Dark Matter) got “what’s that lip?” comments.
-  - Cosmic Brushes Death (Tarot) Palette:
-    - Multi-creator momentum; audience requested Sinister/Cooltrals/Smolder comparisons; “unique but grungy” shimmers; metallic red scrutiny; “this shall be mine” comments.
-  - DeDe’s Signature Festive Elegance:
-    - Holiday greens/reds/mustard with depth; magnetic singles to swap in iridescent gradients. Multiple “immediate add to cart” and “I need this palette” signals.
-  - Rituel de Fille Ghost Frequency BF reveals:
-    - Snowdrop Color Nectar Balm (cool cherry blossom pink), Apparition Rare Light (fuchsia flash, no sparkle), Midnight Glow Thorn Bite Lip Oil (rust red with green/blue shimmer), Crux Celestial Sphere Eye Gloss (brown base silver sparkle), Hemlock Lip Sheer (obsidian purple). “I’m buying enough to get all freebies” behavior.
-  - Lethal Serpentine (rebrand):
-    - Pink/green serpent story; Basilisk multichrome spotlight; Infinity Lip Stains (“Deadly Nightshade”) and Slide balm. US warehouse = tariff-free; “consider me tempted/I bought it” comments.
-  - Clionadh singles:
-    - Restock guidance reels: Line of Queens, Mert, Amalgam, Oriate, Vineyard, Gargoyle Light, Exothermic, Ascension, Synthesis. “How do we buy?/Link” requests.
+  - Kaleidos Epiphany Glow Melt-On Eyeliners (new shades): Scarlet Striker (true red) led buzz; long-wear claims reinforced by creators and comments.
+  - Kaleidos Moon Arcade Glass Load Lip Melts and new lip liners: refillable, iridescent sparkle shades (Cheat Code, Frizz Melt, Lunar Token) gained traction; comparison content vs Fenty/Joocyee shimmery balms spurred interest.
+  - Cosmic Brushes Death Tarot Palette: “grungy but colorful” story, holochrome shimmer; heavy demand for comparison with Sinister and undertone clarity—multiple “buying” comments.
+  - Dede’s Signature Festive Elegance Palette (+ gradient singles): repeated “add to cart,” “perfect Christmas palette,” and appreciation for depth without relying on black.
+  - Rituel de Fille Black Friday exclusives: Snowdrop (Color Nectar), Apparition (Rare Light crème luminizer), Midnight Glow (Thorn Bite lip oil), Hemlock (Lip Sheer), Crux (Celestial Sphere eye gloss). Strong GWP-driven basket-building (“$200+ to get all freebies”), plus UK availability frustrations.
+  - Lethal Serpentine Palette + Infinity Lip Stains + Slide Balm: “pink with green” serpent looks, noted holochrome/multichromes; US-warehouse shipping ups appeal.
+  - Clionadh stained glass restock and curation reels: “How do we buy?” and “Link” signals; code-stacking messaging resonated.
+  - Terra Moons Celestine Dust: ethereal blue shift with red sparkles featured in high-gloss looks.
+  - Bella Beauté Bar sale: Ocean Jewel OOS called out; Poison Garden remains a fan favorite for depth and shimmer mix.
 
-- The “Look” Breakdown:
-  - EYES:
-    - Graphic liners are “back”: bold red wing/halo (Kaleidos Scarlet Striker), block shapes; snowflake/white detail liner; heavy inner-corner-to-browbone sparkle (“Not Scared to Sparkle”).
-    - One-and-done oil-slick lids with glossy gelee (Rituel de Fille Crux) and holo/holochrome shimmers (Cosmic, Lethal).
-    - Greens dominate: emerald–chartreuse smoke, neon inner corners, serpent metallics; grungy grays and berry–bronze overlays.
-  - LIPS:
-    - High-shine, suspended-glitter balms/glazes (Kaleidos Glass Load; Fenty/Joocyee comparisons); lip oils (Rituel de Fille Midnight Glow).
-    - Deep liners (Merlot, Java, Dark Matter) + gloss toppers; alt tones (opaque gray balm; black gloss; teal metallic Jolie).
-  - CHEEKS/BASE:
-    - Cream/liquid textures; dewy “wet” highlights without glitter (Rituel Rare Light). Cool pink blush balms (Snowdrop) and sculpting with neutral undertones (store-friendly for broad skintones).
+- The “Look” Breakdown
+  - Eyes:
+    - Heavy rotation of multichrome and holo toppers; oil-slick gelée gloss (brown-silver, grungy) used as all-over lid or inner-corner “beam” (Crux).
+    - Graphic liner: editorial red glitter wing (Kaleidos Scarlet Striker), white snowflake detailing, bold black wings; long-wear shimmer liners touted for deep-set/hooded eyes.
+    - Holiday palettes with real depth: emerald/forest, olive, mustard, true red, taupe/gray, holo silver; matte saturation noted on deeper skin in swatches.
+  - Lips:
+    - Shiny, comfortable balms/oils with visible micro-glitter; iridescent “transformer” toppers; gray/taupe/blackened glosses for alt-goth; structured brown liner with glossy nude/pink.
+    - Metallics surfaced (deep teal, menacing metals/olive); lip stains blotted + balm layered for soft sheen.
+  - Cheeks/Highlight:
+    - Cool pink blush (cherry blossom pink) bridging eye and cheek; glossy skin; “pure glow without sparkle” cream luminizers alongside hyper-sparkle face highlights.
 
 ## 3. Aesthetic & Hashtag Trends
 
 - Visual Themes:
-  - #gothmakeup, #grungemakeup, #sparklymakeup, #etherealmakeup, #pastelmakeup; “medieval core” curations; “snowflake makeup” holiday micro-tutorials; tarot/goth holiday crossover.
+  - #gothmakeup, #grungemakeup, #softgoth, #sparklymakeup, #wintermakeup, #pastelmakeup, #graphicliner, “medieval core,” “oil-slick” eyes, tarot/occult styling, festive flatlays with vintage props.
 - Color Stories:
-  - Holiday green/red with real depth (forest, olive, true red), chartreuse pops; moody silver–brown oil-slick lids; dusty lilac lips; gray lip balm; jewel tones (emerald, amethyst); metallic teal lips as a statement.
+  - Holiday: true reds (non-orange), emerald/teal, olive/mustard, champagne/gold, holo silver.
+  - Alt/Editorial: gray lips, taupe-brown lips, cobalt/indigo sparkles, chartreuse, lavender/lilac, icy periwinkle; pastel rainbow with winter motifs.
 
 ## 4. Purchase-Intent Signals (From Comments)
 
 - “Add to Cart” Energy:
-  - Cosmic Brushes Death: “Yep, this shall be mine,” “So now I need this one too,” “I’m probably going to buy it anyway.”
-  - DeDe’s Festive Elegance: “Immediate add to cart!!!” “I need this palette.”
-  - Rituel de Fille: “I’m going HAM to get all freebies,” “I can’t wait to buy this!!”
-  - Lethal Serpentine: “I bought the palette,” “consider me tempted.”
-- Restock Demands:
-  - Bella Beauté Bar Ocean Jewel “out of stock… got the others”; desire for Cosmic’s metallic red done right; general scarcity cues on previous CB reds (“always sold out”).
+  - Cosmic Brushes Death: “Yep, this shall be mine,” “I’m probably going to buy it anyway.”
+  - Dede’s Festive Elegance: “Immediate add to cart,” “I need this palette.”
+  - Rituel de Fille: “I’m going to make a $200+ order so I can get all the freebies,” multiple “I need them so bad in the UK.”
+  - Clionadh: “How do we buy?! Link.”
+  - Deverune Dewdrops 2: “I just ordered this last night!”
+  - Bella Beauté Bar: “Got the others!” amid OOS mentions.
+- Restock/Availability:
+  - BBB Ocean Jewel OOS; repeated desire for UK access to RdF BF exclusives.
 - Curiosity Clusters:
-  - Side-by-side swatch requests: Cosmic Death vs Sinister/Cooltrals/Smolder; “How does the red compare to Ruby Flame?”
-  - Eyeliner wear: “builds easily/lasts all day” feedback; tutorials requested for snowflake and eye looks.
-  - Lip product comparisons: “Compare Kaleidos lip melts to lip glazes”; “How to buy?”/link asks for Clionadh; “Is BF sale 20 off?” for RdF.
+  - Shade comparisons: Cosmic Death vs Sinister/Cooltrals/Smolder; red shimmer vs Ruby Flame.
+  - Tools: “Best brush for water-activated liner?”
+  - Wear queries: long-wear of eye gloss (creasing acknowledged as likely over long wear); lip oil plumping sensation (hydration-based, not tingly).
 
 ## 5. Opportunities for the Store
 
 - Stocking Recommendations:
-  - Kaleidos Moon Arcade: prioritize Scarlet Striker red liner; Miss Matrix/Moon Mechanic blues; Stranger gray balm; Frizz Melt/Cheat Code/Geek Out lip melts; deep lip liners (Merlot, Java).
-  - Cosmic Brushes Death Palette: launch support + comparison content; emphasize holochrome and non-black-base jewel shimmers; meet red-metallic demand.
-  - DeDe’s Signature Festive Elegance + gradient singles: push “holiday with depth” and magnetic customization.
-  - Rituel de Fille core: Rare Light Creme Luminizers (Apparition-type), Levitation Lash, Thorn Bite lip oils; if exclusives unavailable, mirror shades/finishes customers want (oil-slick eye toppers, obsidian/plum lip sheers).
-  - Lethal Serpentine + Infinity Lip Stains: highlight Basilisk, “US warehouse” shipping advantage.
-  - Clionadh singles: curate the 9 highlighted shades; bundle “green/pink Wicked” or “oil-slick neutral” sets.
-  - Alt statement lips: Jolie Metallics (teal “Earthly”), black gloss options.
-
+  - Sparkle infrastructure: multichrome singles (Clionadh/Terra Moons/Fantasy Cosmetica), holo/iridescent toppers, oil-slick gelée eye glosses.
+  - Long-wear, sparkly liners: especially red shimmer (true red, no orange shift, no black base), plus blues/greys; water-activated liners and pro brushes.
+  - Holiday palettes with depth: red/green/gold stories that include olive/mustard/teal/gray mattes and multiple metallic textures.
+  - Lip ecosystem: iridescent balm-sticks/lip melts (refillable where possible), non-tingly plumping lip oils, gray/taupe/blackened glosses, deep brown liners.
+  - Inclusive swatch assets: ensure deep-skin swatches for pastel mattes and holo silvers.
 - Content Strategy:
-  - Side-by-side comparison reels (Cosmic Death vs Sinister/Cooltrals/Smolder; red shimmers across brands).
-  - 30–60s “one-and-done” eye demos (Crux-style gloss; single multichrome lid).
-  - Graphic liner shorts: red block wing, snowflake details; brush/tool recommendations for water-activated liner (viewers asked).
-  - “Build your holiday grunge” kits (greens/reds + silver/brown toppers) and “medieval core” mini-capsules.
-  - Creator-code amplification and “stackable codes” messaging (Clionadh, Kaleidos, Lethal, RdF) to capture BF urgency.
-
+  - Comparison reels and undertone explainers (Cosmic Death vs Sinister etc.)—highly requested.
+  - Macro-sparkle demos under multiple lighting; “one-and-done” eye gloss looks.
+  - Tutorial reels for seasonal graphic liner (snowflake/red wing) and emerald “serpentine” looks.
+  - “Stack your cart” GWP navigation content; code-stacking callouts; UK/EU availability notes where relevant.
+  - Tool tips: water-activated liner brush guide; “keep your face relaxed” application hacks (echoing pro-artist education).
 - Gap Analysis:
-  - True sparkly red shadow: demand for a bright red shimmer that isn’t orange-shifting or black-based—curate/commission a true-crimson metallic/glitter.
-  - Crease-resistant glossy lids: offer eye-safe, longer-set gelées/creams with minimal creasing tips/base combos.
-  - Tools: water-activated liner brush recs set (firm, fine tips) addressing “my brush is too flimsy” pain point.
+  - Unmet demand for a true metallic red shimmer (non-orange, non–black base). Opportunity to source or develop.
+  - Eye gloss guidance: prime/setting strategies to mitigate creasing; bundle with a compatible base.
+  - Advent calendar sentiment skewed negative on minis/value—curate fewer, better-value sets if participating.
 
 ## 6. Special insights
 
 - Emerging Micro-Trends:
-  - Gray lip balm and dusty-lilac glossy lips in alt looks; metallic teal lipstick as a holiday statement.
-  - Inner-corner-to-browbone “sparkle cascade” highlight becoming a signature shot across creators.
-  - Holochrome callouts in palettes are becoming a key selling term, not just “multichrome.”
-
+  - Gray lip balm/gloss as a wearable alt neutral; taupe-gray lip liners paired with iridescent balms.
+  - Inner-corner “beam” technique using high-shine eye gloss taken up and down the nose bridge for editorial gleam.
+  - Medieval-core curations: jewel-tone metallics, parchment yellows, oxidized bronzes packaged as monthly “kits.”
 - Unexpected Pairings:
-  - Lip oils and glazes layered over deep liners for complex, editorial lips; black gloss over softened lip base.
-  - Magnetic singles swapped into holiday palettes for iridescent inner corners; blush balms doubled on eyes.
-
+  - Lip oils over lip sheers for lacquered depth; lipstick-as-cheek and color balms across eyes/cheeks/lips (monochrome cherry blossom pink).
+  - Holo/diamond sparkle layered over matte reds to achieve “oil-slick” cherry metals without black bases.
 - Creative insight:
-  - Package a “Graphic Holiday” kit: Scarlet red liner + icy white detail liner + oil-slick topper + brush duo for water-activated detail; pair with a green-smoke quad. Market as “grunge Christmas in 5 minutes.”
-  - For shoppers chasing GWP ladders (Rituel de Fille), build cart-saving guides showing thresholds and shade pairings to reach tiers with minimal waste—commenters explicitly strategized to get all freebies.
-
+  - Refillable sparkle sticks (Kaleidos) suggest a broader shift toward modular, collectible sparkle formats. A curated “Sparkle Lab” landing page—segmenting iridescent toppers by undertone/shift and pairing with suggested liners/lip bases—would both educate and convert during peak holiday traffic.
