--- a/2025/week_48/insta_weekly_2025_48_gpt-5-2025-08-07.md
+++ b/2025/week_48/insta_weekly_2025_48_gpt-5-2025-08-07.md
@@ -1,94 +1,120 @@
 # Weekly Instagram Beauty Media Landscape Report
 
-- Key Takeaway: Nov 24–30, 2025 delivered a Black Friday-fueled indie surge: sparkly, long-wear eye toppers and bold liners dominated, while red–green holiday palettes with real depth led purchase intent. Tutorial reels, macro-sparkle swatches, and comparison content drove the strongest engagement.
+- Key Takeaway: Nov 24–30, 2025 delivered a Black Friday-fueled spike in indie launches and sparkle-forward, alt-goth beauty. Kaleidos’ comeback (Moon Arcade), Cosmic Brushes’ Death Tarot palette, and Rituel de Fille’s Ghost Frequency drove the week’s demand while creators leaned into grungy holiday reds/greens, iridescent lips, and oil-slick eye gloss.
 
 ## 1. Overview
 
 - The Vibe:
-  - Launch week energy across multiple indie drops (Cosmic Brushes, Dede’s Signature, Kaleidos, Rituel de Fille, Lethal). Feeds skewed to swatch carousels and close-up sparkly demos, with seasonal looks (snowflake liner, grunge Christmas) and “one-and-done” glossy lids.
-  - Alt/goth aesthetics threaded through the week: oil-slick eye gloss, gray/teal/blackened lips, medieval-core curations, and graphic red liner.
+  - Launch-and-swatch week: fast-cut reels, macro arm swatches, side-by-side comparisons, and creator “top recs” dominated.
+  - Looks skewed alt and editorial: graphic liners (snowflakes, claw wings), oil-gloss lids, heavy inner-corner-to-brow shimmer streaks, and bleached/soft brows.
+  - Holiday palettes were “grunge Christmas” (depthy reds/greens, chartreuse, teal) vs. standard festive glam.
+
 - Engagement Temperature:
-  - Hot. Followers asked for shade comparisons, undertone breakdowns, and links; many declared intent to buy, tagged friends, and referenced past OOS pain points.
-  - Notable asks: side-by-side palette comparisons (Cosmic Death vs Sinister/Cooltrals/Smolder), “true metallic red” demands, brush recs for water-activated liner, and UK availability for limited drops.
+  - Buyers asked for links, code stacking, comparisons, and undertone breakdowns; multiple “this shall be mine,” “add to cart,” and OOS mentions.
+  - Teaching/troubleshooting content performed: brush recs, liner technique, and “keep your face still” application hacks spurred saves/shares.
+  - Viral resonance clusters: Kaleidos new red liner staying red; Cosmic Brushes comparisons (Death vs Sinister/Cooltrals/Smolder); Rituel’s GWPs strategy.
 
 ## 2. Product Momentum (Brand & Item Velocity)
 
 - Top Mentioned Brands:
-  - Kaleidos, Cosmic Brushes (Cosmic Beauty), Dede’s Signature, Rituel de Fille, Lethal Cosmetics, Bella Beauté Bar, Clionadh, Terra Moons, Melt, Unearthly, Blend Bunny, MOB Beauty, Fantasy Cosmetica, Joocyee, Girlcult, Half Magic.
+  - Kaleidos, Cosmic Brushes, Rituel de Fille, Dede’s Signature, Lethal Cosmetics.
+  - Secondary heat: Bella Beauté Bar, Melt, Terra Moons, Clionadh, Blend Bunny, Danessa Myricks.
 
 - Viral Products:
-  - Kaleidos Epiphany Glow Melt-On Eyeliners (new shades): Scarlet Striker (true red) led buzz; long-wear claims reinforced by creators and comments.
-  - Kaleidos Moon Arcade Glass Load Lip Melts and new lip liners: refillable, iridescent sparkle shades (Cheat Code, Frizz Melt, Lunar Token) gained traction; comparison content vs Fenty/Joocyee shimmery balms spurred interest.
-  - Cosmic Brushes Death Tarot Palette: “grungy but colorful” story, holochrome shimmer; heavy demand for comparison with Sinister and undertone clarity—multiple “buying” comments.
-  - Dede’s Signature Festive Elegance Palette (+ gradient singles): repeated “add to cart,” “perfect Christmas palette,” and appreciation for depth without relying on black.
-  - Rituel de Fille Black Friday exclusives: Snowdrop (Color Nectar), Apparition (Rare Light crème luminizer), Midnight Glow (Thorn Bite lip oil), Hemlock (Lip Sheer), Crux (Celestial Sphere eye gloss). Strong GWP-driven basket-building (“$200+ to get all freebies”), plus UK availability frustrations.
-  - Lethal Serpentine Palette + Infinity Lip Stains + Slide Balm: “pink with green” serpent looks, noted holochrome/multichromes; US-warehouse shipping ups appeal.
-  - Clionadh stained glass restock and curation reels: “How do we buy?” and “Link” signals; code-stacking messaging resonated.
-  - Terra Moons Celestine Dust: ethereal blue shift with red sparkles featured in high-gloss looks.
-  - Bella Beauté Bar sale: Ocean Jewel OOS called out; Poison Garden remains a fan favorite for depth and shimmer mix.
+  - Kaleidos Moon Arcade:
+    - Epiphany Glow Melt-On Eyeliners (new shades) with standout Scarlet Striker (true red noted as “stays red”); Miss Matrix/Aurora Runner caught attention.
+    - Glass Load Lip Melts (refillable) — iridescent, gray, and lilac toppers (Frizz Melt, Cheat Code, Geek Out, Stranger) favored for “fun” combos.
+    - New lip liners (Dark Matter, Java, Merlot) praised for glide + set.
+  - Cosmic Brushes Death Tarot palette:
+    - Demand for comparable swatches vs Sinister/Cooltrals/Smolder; comments signal “unique,” “shall be mine,” and metallic red hunt.
+    - Shimmers incl. holochromes; smoky-matte depth plus chartreuse/teal pulled “grunge holiday” energy.
+  - Rituel de Fille Ghost Frequency (BF GWPs + individual):
+    - Snowdrop Color Nectar (cool cherry blossom), Apparition Rare Light (fuchsia flash), Crux eye gloss (grungy silver-brown oil-slick), Hemlock Lip Sheer (obsidian purple), Midnight Glow thorn lip oil (rust with blue/green sparkle).
+    - High “I need this,” “going to buy enough for all GWPs” sentiment; eye gloss embraced as one-and-done.
+  - Dede’s Signature Festive Elegance:
+    - Fully magnetic 15-pan + matching gradient singles; sparkly shimmers with a true red matte and non-staining claim resonated; “immediate add to cart.”
+  - Lethal rebrand:
+    - Serpentine palette (pink/green serpent story with holochrome + multichromes) and Infinity Lip Stains; palette builder and US shipping callouts lowered friction.
+  - Also noted:
+    - Bella Beauté Bar recs sparked OOS chatter (Ocean Jewel). Clionadh stained glass restock drove “How to buy?” comments. Terra Moons Celestine Dust got “most beautiful blue shift” reactions. Melt Edward Scissorhands (liners, toppers) fed nostalgic buys. Jolie Beauty metallic lips (teal, vamp) trended in alt looks.
 
-- The “Look” Breakdown
+- The “Look” Breakdown:
   - Eyes:
-    - Heavy rotation of multichrome and holo toppers; oil-slick gelée gloss (brown-silver, grungy) used as all-over lid or inner-corner “beam” (Crux).
-    - Graphic liner: editorial red glitter wing (Kaleidos Scarlet Striker), white snowflake detailing, bold black wings; long-wear shimmer liners touted for deep-set/hooded eyes.
-    - Holiday palettes with real depth: emerald/forest, olive, mustard, true red, taupe/gray, holo silver; matte saturation noted on deeper skin in swatches.
+    - Textures: multichrome/holo/shifty toppers, chunky sparkles, and high-gloss gelee eye gloss (oil-slick).
+    - Shades repeated: red shimmer/metallics, chartreuse/lime, teal/navy, lavender-lilac, periwinkle/blue, mustard/olive, silver.
+    - Techniques: graphic/blocked liner (snowflakes, extended red “claw” wings), waterlines in red/blue, inner-corner shimmer drawn vertically to brow, gems.
   - Lips:
-    - Shiny, comfortable balms/oils with visible micro-glitter; iridescent “transformer” toppers; gray/taupe/blackened glosses for alt-goth; structured brown liner with glossy nude/pink.
-    - Metallics surfaced (deep teal, menacing metals/olive); lip stains blotted + balm layered for soft sheen.
-  - Cheeks/Highlight:
-    - Cool pink blush (cherry blossom pink) bridging eye and cheek; glossy skin; “pure glow without sparkle” cream luminizers alongside hyper-sparkle face highlights.
+    - Glossy oils and sparkly balms/sticks; gray/greige, lilac, rusty red sparkles; deep brown liners + iridescent toppers; metallic teal moments.
+  - Cheeks:
+    - Cream balms and flushed pink across nose/cheekbone; luminous fuchsia/pink highlighters (non-glitter glow).
 
 ## 3. Aesthetic & Hashtag Trends
 
 - Visual Themes:
-  - #gothmakeup, #grungemakeup, #softgoth, #sparklymakeup, #wintermakeup, #pastelmakeup, #graphicliner, “medieval core,” “oil-slick” eyes, tarot/occult styling, festive flatlays with vintage props.
+  - #gothmakeup, #grungemakeup, #softgoth stayed dominant.
+  - “Medieval core” curation: jewel tones + parchment/beige + metals; tarot props, skulls, velvet, holiday flatlays with cookies/lights.
+  - “Wicked green + pink” palette customs, anime/film-inspired (Angel’s Egg) looks.
+
 - Color Stories:
-  - Holiday: true reds (non-orange), emerald/teal, olive/mustard, champagne/gold, holo silver.
-  - Alt/Editorial: gray lips, taupe-brown lips, cobalt/indigo sparkles, chartreuse, lavender/lilac, icy periwinkle; pastel rainbow with winter motifs.
+  - Holiday depth: true reds + emerald/olive/forest + mustard.
+  - Cool brights: chartreuse, teal, periwinkle, holo silver; cool pink/fuchsia glow.
+  - Lips: gray/greige, lilac, deep brown; rust-red sparkles.
 
 ## 4. Purchase-Intent Signals (From Comments)
 
 - “Add to Cart” Energy:
-  - Cosmic Brushes Death: “Yep, this shall be mine,” “I’m probably going to buy it anyway.”
+  - Cosmic Brushes Death: “This shall be mine,” “probably going to buy it anyway.”
   - Dede’s Festive Elegance: “Immediate add to cart,” “I need this palette.”
-  - Rituel de Fille: “I’m going to make a $200+ order so I can get all the freebies,” multiple “I need them so bad in the UK.”
-  - Clionadh: “How do we buy?! Link.”
-  - Deverune Dewdrops 2: “I just ordered this last night!”
-  - Bella Beauté Bar: “Got the others!” amid OOS mentions.
-- Restock/Availability:
-  - BBB Ocean Jewel OOS; repeated desire for UK access to RdF BF exclusives.
+  - Rituel de Fille Ghost Frequency: multiple planning to spend to hit all GWP tiers.
+  - Kaleidos Moon Arcade: “I need that grey balm,” “so excited to smother myself in that red.”
+
+- Restock Demands:
+  - Bella Beauté Bar Ocean Jewel reported OOS; users pivoted to other palettes.
+  - Longstanding desire for a true metallic/sparkly red (commenters cite sold-out reds, request non-orange/non-black-base reds).
+
 - Curiosity Clusters:
-  - Shade comparisons: Cosmic Death vs Sinister/Cooltrals/Smolder; red shimmer vs Ruby Flame.
-  - Tools: “Best brush for water-activated liner?”
-  - Wear queries: long-wear of eye gloss (creasing acknowledged as likely over long wear); lip oil plumping sensation (hydration-based, not tingly).
+  - Comparisons: Death vs Sinister/Cooltrals/Smolder; Kaleidos Lip Melts vs Lip Glaze; red shimmers vs “Ruby Flame.”
+  - Performance: “Does the red liner stay red?” (affirmed), eye gloss creasing tolerance (addressed as expected but worth it).
+  - Tools: “Best brush for water-activated liner?”; brush guides/reels received strong engagement.
+  - Buying logistics: “How do we buy?” “Link?” “Is the BF sale 20%?”
 
 ## 5. Opportunities for the Store
 
 - Stocking Recommendations:
-  - Sparkle infrastructure: multichrome singles (Clionadh/Terra Moons/Fantasy Cosmetica), holo/iridescent toppers, oil-slick gelée eye glosses.
-  - Long-wear, sparkly liners: especially red shimmer (true red, no orange shift, no black base), plus blues/greys; water-activated liners and pro brushes.
-  - Holiday palettes with depth: red/green/gold stories that include olive/mustard/teal/gray mattes and multiple metallic textures.
-  - Lip ecosystem: iridescent balm-sticks/lip melts (refillable where possible), non-tingly plumping lip oils, gray/taupe/blackened glosses, deep brown liners.
-  - Inclusive swatch assets: ensure deep-skin swatches for pastel mattes and holo silvers.
-- Content Strategy:
-  - Comparison reels and undertone explainers (Cosmic Death vs Sinister etc.)—highly requested.
-  - Macro-sparkle demos under multiple lighting; “one-and-done” eye gloss looks.
-  - Tutorial reels for seasonal graphic liner (snowflake/red wing) and emerald “serpentine” looks.
-  - “Stack your cart” GWP navigation content; code-stacking callouts; UK/EU availability notes where relevant.
-  - Tool tips: water-activated liner brush guide; “keep your face relaxed” application hacks (echoing pro-artist education).
-- Gap Analysis:
-  - Unmet demand for a true metallic red shimmer (non-orange, non–black base). Opportunity to source or develop.
-  - Eye gloss guidance: prime/setting strategies to mitigate creasing; bundle with a compatible base.
-  - Advent calendar sentiment skewed negative on minis/value—curate fewer, better-value sets if participating.
+  - High priority:
+    - Kaleidos Moon Arcade: Epiphany Glow (Scarlet Striker, Miss Matrix) + Glass Load Lip Melts (gray/iridescent toppers) + nude lip liners (Dark Matter/Java/Merlot).
+    - Cosmic Brushes Death Tarot palette; if possible, carry or pre-sell complementary comparison targets (Sinister/Cooltrals/Smolder) or create in-house shade twins.
+    - Rituel de Fille Ghost Frequency SKUs (Snowdrop, Apparition, Crux, Hemlock, Midnight Glow) and core Levitation Lash.
+    - Lethal Serpentine + Infinity Lip Stains; spotlight US-warehouse shipping in PDP.
+  - Complementary heroes:
+    - Clionadh stained glass singles, Terra Moons Celestine Dust, Bella Beauté Bar Poison Garden/Dark Dreamscape.
+    - Melt Edward Scissorhands toppers/pencils for nostalgia-driven shoppers.
+    - Tools: Rose & Ben E29, Rare Beauty blush brush, MyKitCo powder, plus precise liner brushes for water-activated formulas.
 
-## 6. Special insights
+- Content Strategy:
+  - Side-by-side swatch reels: satisfy comparison requests (Death vs Sinister; “true red” stack-off across brands).
+  - “Stays Red” stress test: wear-test Scarlet Striker vs competitors under warm lighting.
+  - One-and-done looks: Crux oil-slick eye in 15 seconds; inner-corner-to-brow shimmer trick.
+  - Themed curations: “Grunge Christmas” kit (red/green + holo topper), “Medieval core metals,” “Wicked green + pink.”
+  - Education shorts: Robert Welsh-style “keep face still,” water-activated liner brush demos, eye gloss on hooded lids (prep/placement).
+
+- Gap Analysis:
+  - True sparkly/metallic red without orange shift/black base: curate best-in-class and commission swatch proof.
+  - Water-activated liner brushes: clear recs + bundles with liners.
+  - Eye gloss guidance: crease-aware techniques (thin layers, strategic placement, set edges) to reduce returns.
+
+## 6. Special Insights
 
 - Emerging Micro-Trends:
-  - Gray lip balm/gloss as a wearable alt neutral; taupe-gray lip liners paired with iridescent balms.
-  - Inner-corner “beam” technique using high-shine eye gloss taken up and down the nose bridge for editorial gleam.
-  - Medieval-core curations: jewel-tone metallics, parchment yellows, oxidized bronzes packaged as monthly “kits.”
+  - Gray is the new neutral: gray lip balms/glosses/liners; greige taupes paired with blue sparkles.
+  - Oil-slick eyes: brown/silver gelee with high-wet glare replacing pressed glitter for “one-and-done.”
+  - Holochromes back on the lid; holographic sparkle called out repeatedly.
+
 - Unexpected Pairings:
-  - Lip oils over lip sheers for lacquered depth; lipstick-as-cheek and color balms across eyes/cheeks/lips (monochrome cherry blossom pink).
-  - Holo/diamond sparkle layered over matte reds to achieve “oil-slick” cherry metals without black bases.
+  - Multi-use pigments: blush balms on eyes/lips; suspended sparkle balms as nose/above-crease highlights.
+  - Red waterline pairings with neutral lids; periwinkle lower lash pops under green lids.
+
 - Creative insight:
-  - Refillable sparkle sticks (Kaleidos) suggest a broader shift toward modular, collectible sparkle formats. A curated “Sparkle Lab” landing page—segmenting iridescent toppers by undertone/shift and pairing with suggested liners/lip bases—would both educate and convert during peak holiday traffic.
+  - Lean into “ritual objects” visual language (tarot cards, velvet, candles) for holiday alt-glam: it photographed and performed better than sterile flatlays.
+  - Promote refillability/modularity (Kaleidos refillable lip melts; Dede’s magnetic pans) as value during BF—audiences reward sustainable, customizable systems.
+  - Bundle “Practice Makes Precision” kits: water-activated liners + pro liner brush + eye gloss + gem adhesive, targeting the graphic-liner resurgence (snowflakes/linework).
